fix issues with vertical line behind cards

--- a/style.css
+++ b/style.css
@@ -369,13 +369,8 @@ p {
     top: 0;
   }
   .stat__cards::before {
-    height: 10px;
-    position: absolute;
-    width: 100%;
-    z-index: -99;
-    background: var(--Cyan);
     transform: rotate(90deg);
-    content: "";
+    width: 700px;
   }
   .stat__cards img {
     transform: translateY(0%);
